# open-truco

./: .gitignore  README.md  examiningpkl.py  paper.blg  pyproject.toml
checkpoints/mccfr_debug/: checkpoint_iter_10000.pkl  checkpoint_iter_5000.pkl  final.pkl
checkpoints/mccfr_local/: checkpoint_iter_10000.pkl  checkpoint_iter_5000.pkl  final.pkl
checkpoints/nfsp/: Shaped_reward.pkl  Sparse_reward.pkl  final_58.pkl
paper/: paper.bbl  paper.bib  paper.blg  paper.tex
paper/svg-inkscape/: basto_svg-tex.pdf_tex  copa_svg-tex.pdf_tex  espada_svg-tex.pdf_tex  oro_svg-tex.pdf_tex
scripts/: __init__.py  evaluate.py  grid_search_nfsp.py  parse_and_plot_grid_search.py  plot_from_checkpoints.py  style.mplstyle  train_deep_cfr.py  train_mccfr.py  train_nfsp.py  train_ppo.py
src/: __init__.py  config.py
src/agents/: __init__.py  baselines.py
src/evaluation/: __init__.py  metrics.py  tournament.py
src/trainers/: __init__.py  deep_cfr.py  mccfr.py  nfsp.py  ppo.py
src/utils/: __init__.py  checkpointing.py  logging.py
